# nexus-security-auditor

./: CHANGELOG.md  LICENSE  Makefile  PERFORMANCE_OPTIMIZATION.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: async_scanner.py  base_module.py  config.py  dns_cache.py  http_pool.py  logger.py  module_loader.py  reporter.py  response_handler.py  retry_handler.py  retry_handler_new.py  risk.py  scanner.py  url_parser.py  utils.py
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  USER_GUIDE.md
modules/: file_permission.py  filesystem_audit.py  network_audit.py  password_policy.py  patch_audit.py  process_audit.py  remote_exploiter.py  service_audit.py  system_audit.py  user_audit.py  vulnerability_scanner.py  waf_detector.py
templates/: report.html
tests/: test_exploiter.py  test_filesystem.py  test_network.py  test_patch.py  test_permissions.py  test_process.py  test_services.py  test_system.py  test_users.py  test_vulnerabilities.py  test_waf.py
