[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-security-auditor"
version = "1.0.0"
description = "Modular defensive security auditing framework."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ronzy" }
]

dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0",
    "colorama>=0.4.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0"
]
