[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-security-auditor"
version = "1.0.0"
description = "Defensive Security Audit Framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Nexus Project" }
]

dependencies = [
    "rich>=13.7.0",
    "jinja2>=3.1.4",
    "psutil>=6.0.0"
]

optional-dependencies = { dev = [
    "pytest>=8.2.2"
] }

[project.scripts]
nexus = "main:main"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
python_files = [
    "test_*.py"
]

[tool.setuptools]
include-package-data = true
